# kioskend

./: CMakeLists.txt  README.md
qml/: HeaderBar.qml  ServerPage.qml  TableCard.qml  TableDetailPage.qml  TablePage.qml  main.qml
src/: DbManager.cpp  DbManager.h  TableManager.cpp  TableManager.h  echo_server.cpp  echo_server.h  main.cpp
